<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fragment_favorite_show"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.movie.MovieFragment">

    <TextView
        android:id="@+id/fragment_state_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="32sp"
        android:visibility="gone"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_show"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item"/>


</FrameLayout>