<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />
    <item
        android:id="@+id/nav_show"
        android:icon="@drawable/ic_tvshow"
        android:title="@string/show" />

    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"/>
</menu>